--- a/src/main/java/com/elixr/apitestutility/Screen1.form
+++ b/src/main/java/com/elixr/apitestutility/Screen1.form
@@ -176,7 +176,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTextArea" name="jsonrequestBody">
+        <Component class="javax.swing.JTextArea" name="jsonRequestBody">
           <Properties>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
