--- a/src/main/java/com/elixr/apitestutility/Screen1.form
+++ b/src/main/java/com/elixr/apitestutility/Screen1.form
@@ -41,7 +41,7 @@
                   </Group>
                   <Component id="jsonTextLabel" min="-2" pref="167" max="-2" attributes="0"/>
                   <Component id="jsonScrollPane" max="32767" attributes="0"/>
-                  <Component id="bottomPanel" pref="677" max="32767" attributes="0"/>
+                  <Component id="bottomPanel" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
@@ -51,8 +51,10 @@
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="baseUrlLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="baseUrl" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
+                              <Component id="protocolComboBox" min="-2" pref="96" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
+                              <Component id="baseUrl" pref="409" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="pathLabel" min="-2" max="-2" attributes="0"/>
@@ -60,7 +62,7 @@
                               <Component id="path" max="32767" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="107" pref="107" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="107" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
@@ -74,6 +76,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="baseUrlLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="baseUrl" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="protocolComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -273,12 +276,22 @@
     <Component class="javax.swing.JComboBox" name="methodDropDown">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;Get&quot;, &quot;Post&quot;, &quot;Put&quot;, &quot;Delete&quot;,&quot;Patch&quot; })" type="code"/>
+          <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;GET&quot;, &quot;POST&quot;, &quot;PUT&quot;, &quot;DELETE&quot;,&quot;PATCH&quot; })" type="code"/>
         </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="methodDropDownActionPerformed"/>
       </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+      </AuxValues>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="protocolComboBox">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;http&quot;, &quot;https&quot;})" type="code"/>
+        </Property>
+      </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
