--- a/src/main/java/com/elixr/apitestutility/OpenHeaderDialog.form
+++ b/src/main/java/com/elixr/apitestutility/OpenHeaderDialog.form
@@ -148,7 +148,7 @@
       <Properties>
         <Property name="editable" type="boolean" value="true"/>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;Content-Type&quot;,&quot;Accept&quot;})" type="code"/>
+          <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;Content-Type&quot;,&quot;Accept&quot;,&quot;Authorization&quot;})" type="code"/>
         </Property>
       </Properties>
       <AuxValues>
