Added some ui changes

--- a/src/main/java/com/elixr/apitestutility/Screen3Frame.form
+++ b/src/main/java/com/elixr/apitestutility/Screen3Frame.form
@@ -108,6 +108,11 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseMoved" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="resultTableMouseMoved"/>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="resultTableFocusLost"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="resultTableMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
