Changed test execution

--- a/src/main/java/com/elixr/apitestutility/Screen2.form
+++ b/src/main/java/com/elixr/apitestutility/Screen2.form
@@ -168,15 +168,15 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backBtnActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="executeTestbtn">
+        <Component class="javax.swing.JButton" name="generateTest">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="12" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Execute Test"/>
+            <Property name="text" type="java.lang.String" value="Generate Test"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="executeTestbtnActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="generateTestActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="exitBtn">
